Article 2 of MAGISFML done

--- a/_posts/sfml/2020-06-09-sfml-1.md
+++ b/_posts/sfml/2020-06-09-sfml-1.md
@@ -19,14 +19,16 @@ So, to get started in my game development process I wanted a simple starting poi
 
 I decided to make a simple 'starter' template which I could then bolster for future use.
 
-With C++ a very useful practice is the use of header files. These are descriptions of what a class/function will do when used, but not how it will do it. It allows you to abstract the structure of the class without worring about the smaller picture. I created my `Application.hpp` file as below:
+With C++ a very useful practice is the use of header files. These are descriptions of what a class/function will do when used, but not how it will do it. It allows you to abstract the structure of the class without worring about the smaller picture.
 
+Here's how I wanted to lay it out:
 1. Poll for window events (closing).
-2. Read network data / User input.
+2. Read network data / user input.
 3. Interpolate movement client side.
 4. Send network data based on what was done this frame.
-5. Render objects.
+5. Render to screen.
 
+I created my `Application.hpp` file as below:
 ```c++
 #ifndef __APPLICATION_H__
 #define __APPLICATION_H__
@@ -40,39 +42,70 @@ class App
 private:
   sf::RenderWindow window;
 
-  sf::Int64 previousUpdate;
-  sf::Int64 elapsedTime;
-
-  sf::Int32 frameDelta;
+  float frameDelta;
 
 public:
   App(int width, int height, sf::String title);
 
-  void update();
-  void fixedUpdate();
-
   void processEvents();
   void processInput();
+  void render();
 };
+
 #endif // __APPLICATION_H__
+
 ```
 <sup style="color: #777">Don't worry about the `#ifndef __APPLICATION_H__` weirdness, it just prevents this file being included more than once by mistake.</sup>
 
-Here you can see a basic constructor which will take the width, height, and title of the game app; 2 update functions (fixedUpdate is called after certain amount of time, update is called every frame); and 2 processing functions for events and inputs.
+Here you can see a basic constructor which will take the width, height, and title of the game app; a render function; and 2 processing functions for events and inputs.
 
 I expanded the constructor to initialise and launch the SFML window like so:
 ```c++
-APPLICATION.CPP
+App::App(int width, int height, sf::String title)
+{
+  // Create render window.
+  window.create(sf::VideoMode(width, height), title);
+  window.setFramerateLimit(30);
+
+   // Init timer variables.
+  frameDelta = 0;
+
+  sf::Clock clock;
+
+  while (window.isOpen())
+  {
+    processEvents();
+    processInput();
+
+    frameDelta = clock.restart().asSeconds();
+    render();
+  }
+}
 ```
 
-At minimum the `processEvents` function must also be declared or the window will hang when launched:
+We have to implement the `processEvents()` function to prevent the window from hanging as the close button is an event:
 ```c++
-PROCESS_EVENTS()
+void App::processEvents()
+{
+  sf::Event e;
+  while (window.pollEvent(e))
+  {
+    if (e.type == sf::Event::Closed)
+    {
+      window.close();
+    }
+  }
+}
 ```
 
-We'll also just clear the window and display it in the update function:
+We'll also clear the window and display it in the render function:
 ```c++
-RENDER()
+void App::render()
+{
+  window.clear();
+
+  window.display();
+}
 ```
 
 With a few example paramaters this gives us the following result:
