--- a/_posts/sfml/2020-06-10-sfml-2.md
+++ b/_posts/sfml/2020-06-10-sfml-2.md
@@ -1,14 +1,135 @@
 ---
-title: "Making a Game in SFML: Basics"
+title: "Making a Game in SFML: Basic Rendering/Controls"
 tags: c++ sfml 
 series: "Making a Game in SFML"
-subtitle: "Basics"
+subtitle: "Basic Rendering/Controls"
 ---
-{% include series.html %}
 
 Last time we worked on getting a simple SFML window to popup, a completely blank canvas for us to begin our work on - _perfect_.
 <!--more-->
 
-```javascript
-// TODO: THIS ARTICLE!
+{% include series.html %}
+
+### Displaying the Paddles
+Our players will be represented by rectangular paddles, which move up and down the screen. Luckily SFML has just the class to help us here, `sf::RectangleShape`.
+
+We'll extend our `Application.hpp` to have a member variable for each player:
+```c++
+/** Application.hpp **/
+private:
+  sf::RenderWindow window;
+
+  float frameDelta;
+
+  Player player1;
+  Player player2;
 ```
+
+And default their position/colours/size in the `App` constructor.
+
+```c++
+/** Application.cpp **/
+App::App(int width, int height, sf::String title)
+{
+  // Create render window.
+  window.create(sf::VideoMode(width, height), title);
+  window.setFramerateLimit(30);
+
+  // Create Players
+  player1.setPosition(sf::Vector2f(10, 10));  // create at top left
+  player2.setPosition(sf::Vector2f(100, 40)); // create at top right
+
+  player1.setSize(sf::Vector2f(20, 60));
+  player2.setSize(sf::Vector2f(20, 60));
+
+  player1.setFillColor(sf::Color::White);
+  player2.setFillColor(sf::Color::White);
+  /** ... **/
+}
+```
+Now we just need to tell the application to render/draw the paddles each frame:
+```c++ 
+/** Application.cpp **/
+void App::render()
+{
+  window.clear();
+
+  window.draw(player1);
+  window.draw(player2);
+
+  window.display();
+}
+```
+
+![Paddles galore!](/assets/images/MAGISFML/sfml-basics-1.JPG)
+
+Oh yeah, now we're cooking with gas! 
+Although - staring at the blank, unmoving paddles is a little... _bland_. Let's get them moving.
+
+### User Input
+Remember when we defined our `processInputs()` function? Let's go ahead and implement that.
+
+Starting with a simple example:
+```c++
+/** Application.cpp **/
+void App::processInput()
+{
+  if (sf::Keyboard::isKeyPressed(sf::Keyboard::Down))
+  {
+    player1.move(0, 1);
+  }
+}
+```
+
+![We have liftoff!](/assets/images/MAGISFML/sfml-basics-2.gif)
+
+Nice! But here's an issue, if the user's computer is running too slow or too fast - the pong paddle will do the same.
+
+![We have liftoff!](/assets/images/MAGISFML/sfml-basics-3.gif)
+
+<sup style="color: #777">Here the framerate is set to 320 rather than 30 for emphasis.</sup>
+
+We can't just increase or decrease the speed, because the function is called once per frame... How about we scale the distance based on the amount of time since the previous frame!
+
+We already have stored the number of seconds since the previous frame in our member variable `frameDelta`, let's use it here:
+```c++
+/** Application.cpp **/
+void App::processInput()
+{
+  if (sf::Keyboard::isKeyPressed(sf::Keyboard::Down))
+  {
+    player1.move(0, frameDelta * 100);
+  }
+}
+```
+
+![We have liftoff!](/assets/images/MAGISFML/sfml-basics-4.gif)
+
+Now that we're all synced up, let's add a few more buttons.
+```c++
+void App::processInput()
+{
+  const int pixelsPerSeconds = 150;
+  if (sf::Keyboard::isKeyPressed(sf::Keyboard::S))
+  {
+    player1.move(0, frameDelta * pixelsPerSeconds);
+  }
+  else if (sf::Keyboard::isKeyPressed(sf::Keyboard::W))
+  {
+    player1.move(0, frameDelta * -pixelsPerSeconds);
+  }
+
+  if (sf::Keyboard::isKeyPressed(sf::Keyboard::Down))
+  {
+    player2.move(0, frameDelta * pixelsPerSeconds);
+  }
+  else if (sf::Keyboard::isKeyPressed(sf::Keyboard::Up))
+  {
+    player2.move(0, frameDelta * -pixelsPerSeconds);
+  }
+}
+```
+
+![We have liftoff!](/assets/images/MAGISFML/sfml-basics-5.gif)
+
+Things sure are starting to come together! Next time we will look into adding the ball, and some collision detection.
