--- a/_posts/sfml/2020-06-12-sfml-3.md
+++ b/_posts/sfml/2020-06-12-sfml-3.md
@@ -1,12 +1,15 @@
 ---
-title: "Making a Game in SFML: TODO"
+title: "Making a Game in SFML: Collisions"
 tags: c++ sfml 
 series: "Making a Game in SFML"
-subtitle: "TODO"
+subtitle: "Collisions"
 ---
+
+<!--more-->
+
 {% include series.html %}
 
 ```javascript
 // TODO: THIS ARTICLE!
 ```
-<!--more-->
+
