Remove premature references to networking.

--- a/_posts/sfml/2020-06-09-sfml-1.md
+++ b/_posts/sfml/2020-06-09-sfml-1.md
@@ -15,7 +15,7 @@ Over the past few weeks I've been looking into getting my head around C++ - the 
 
 One of the most popular C++ game engines/libaries is **S**imple **F**ast **M**edia **L**ibrary (**SFML**) - I won't be covering how to install SFML here, as there are hundreds of ways to do it per system _and hundreds of people who will say I'm showing you the wrong way anyway._
 
-So, to get started in my game development process I wanted a simple starting point - the `Hello World!` equivalent in game development. [Pong](https://www.ponggame.org/pong-no-flash.php). The classic arcade game with a painfully simple concept, hit the ball. Since my future goals would involve a complicated project I wanted to get the basics down first; this included player controls, rendering, and networking.
+So, to get started in my game development process I wanted a simple starting point - the `Hello World!` equivalent in game development. [Pong](https://www.ponggame.org/pong-no-flash.php). The classic arcade game with a painfully simple concept, hit the ball. Since my future goals would involve a more complicated project I wanted to get the basics down first; this included opening a SFML window, taking input from the player, and rendering objects to screen.
 
 I decided to make a simple 'starter' template which I could then bolster for future use.
 
@@ -23,10 +23,8 @@ With C++ a very useful practice is the use of header files. These are descriptio
 
 Here's how I wanted to lay it out:
 1. Poll for window events (closing).
-2. Read network data / user input.
-3. Interpolate movement client side.
-4. Send network data based on what was done this frame.
-5. Render to screen.
+2. Read user input => convert into movement.
+3. Render to screen.
 
 I created my `Application.hpp` file as below:
 ```c++
@@ -55,7 +53,7 @@ public:
 #endif // __APPLICATION_H__
 
 ```
-<sup style="color: #777">Don't worry about the `#ifndef __APPLICATION_H__` weirdness, it just prevents this file being included more than once by mistake.</sup>
+<sup style="color: #777">Don't worry about the `#ifndef __APPLICATION_H__` weirdness, it just prevents this file being included more than once by mistake. We're also not going to be putting the network functions in until later, as they are more nuanced and deserve a full write up (plus I'm not sure what I'm going to call them yet ;))</sup>
 
 Here you can see a basic constructor which will take the width, height, and title of the game app; a render function; and 2 processing functions for events and inputs.
 
