Add 1/2 of article 3 for MAGISFML

--- a/_posts/sfml/2020-06-09-sfml-1.md
+++ b/_posts/sfml/2020-06-09-sfml-1.md
@@ -65,7 +65,7 @@ App::App(int width, int height, sf::String title)
   window.create(sf::VideoMode(width, height), title);
   window.setFramerateLimit(30);
 
-   // Init timer variables.
+   // Init timer variable.
   frameDelta = 0;
 
   sf::Clock clock;
