--- a/_posts/sfml/2020-06-12-sfml-3.md
+++ b/_posts/sfml/2020-06-12-sfml-3.md
@@ -5,11 +5,96 @@ series: "Making a Game in SFML"
 subtitle: "Collisions"
 ---
 
+Collisions, love 'em, hate 'em - we all gotta deal with them. I often wish I could phase through my arm through the fridge to get myself a snack but life is cruel sometimes.
 <!--more-->
 
 {% include series.html %}
+### Ball Setup
+So last time we set up a nice little starter template for Pong - a pair of paddles we can control with the keyboard. There's still a missing element though - the ball.
 
-```javascript
-// TODO: THIS ARTICLE!
+Since typically balls are circular in nature, we'll go ahead and define the ball using an `sf::CircleShape`. However, unlike the players which only really need position; the ball will need to store it's velocity as well. 
+
+To do this we'll create a simple `struct` which stores this as well as the `CircleShape`:
+
+```c++
+/** Application.hpp **/
+struct Ball
+{
+  sf::CircleShape circleShape;
+  sf::Vector2f vel;
+}
+
+// class App {...
+  sf::RectangleShape player1;
+  sf::RectangleShape player2;
+
+  Ball ball;
+// etc ...
+```
+<sup style="color: #777">Note: by defining the struct in our header file it is actually usable in our `cpp` file as well, so we don't need to redeclare it - nice!.</sup>
+
+Next we need to give the ball some initial conditions in our `App` constructor:
+
+```c++
+App::App(int width, int height, sf::String title)
+{
+  // Create render window.
+
+  // Create Players
+
+  // Create ball
+  ball.circleShape = sf::CircleShape(15.0f); // initial radius
+  ball.circleShape.setFillColor(sf::Color::White);
+  ball.circleShape.setPosition(sf::Vector2f(width / 2, height / 2));
+  ball.vel = sf::Vector2f(1, 0);
+
+  // boring stuff ...
+}
 ```
 
+Let's quickly add it to our render functions as well to draw it to the screen.
+
+```c++
+void App::render()
+{
+  window.clear();
+
+  window.draw(player1);
+  window.draw(player2);
+
+  window.draw(ball.circleShape);
+
+  window.display();
+}
+```
+
+![First ball rendering](/assets/images/MAGISFML/sfml-ball-1.JPG)
+
+Well it looks like a ball! Notice however that even though we told the ball to set its position to half the width & half the height - it isn't centered. This is because by default our ball will render starting in the top left, rather than it's center. We can correct this by adding the following line of code when the `CircleShape` is created:
+```c++
+//ball.circleShape.setFillColor(sf::Color::White);
+  ball.circleShape.setOrigin(sf::Vector2f(-ball.circleShape.getRadius(), -ball.circleShape.getRadius()));
+//ball.circleShape.setPosition(sf::Vector2f(width / 2, height / 2));
+```
+
+This offsets the rendering of the circle by half of it's size (radius is half of diameter).
+
+Next up we need to update the position of the ball every frame according to it's velocity - here I want to make a change, rather than updating the location of the paddles within the `processInput()` function, I think I'd prefer to move all 3 objects within the same function, and simply use a struct like we have here to hold the vertical velocity of the Player's.
+
+### ℜ𝔢𝔣𝔞𝔠𝔱𝔬𝔯𝔦𝔫𝔤 𝔗𝔦𝔪𝔢!
+I won't show the whole file for each change, here's a condensed version:
+
+![Git diff 1](/assets/images/MAGISFML/sfml-player-refactor-1.PNG)
+
+![Git diff 2](/assets/images/MAGISFML/sfml-player-refactor-2.PNG)
+
+![Git diff 3](/assets/images/MAGISFML/sfml-player-refactor-3.PNG)
+
+![Git diff 4](/assets/images/MAGISFML/sfml-player-refactor-4.PNG)
+
+```javascript
+
+/** TODO:
+    REST OF THIS ARTICLE
+**/
+```
