Update image links - also add some more content to article 3

--- a/_posts/sfml/2020-06-09-sfml-1.md
+++ b/_posts/sfml/2020-06-09-sfml-1.md
@@ -108,7 +108,7 @@ void App::render()
 
 With a few example paramaters this gives us the following result:
 
-![Woo hoo](/assets/images/MAGISFML/sfml-intro-1.JPG)
+![Woo hoo](/assets/images/MAGISFML/sfml-intro-1.jpg)
 
 Sucess! We have opened a SFML window. 
 
