--- a/_posts/sfml/2020-06-10-sfml-2.md
+++ b/_posts/sfml/2020-06-10-sfml-2.md
@@ -61,7 +61,7 @@ void App::render()
 }
 ```
 
-![Paddles galore!](/assets/images/MAGISFML/sfml-basics-1.JPG)
+![Paddles galore!](/assets/images/MAGISFML/sfml-basics-1.jpg)
 
 Oh yeah, now we're cooking with gas! 
 Although - staring at the blank, unmoving paddles is a little... _bland_. Let's get them moving.
