--- a/_posts/sfml/2020-06-12-sfml-3.md
+++ b/_posts/sfml/2020-06-12-sfml-3.md
@@ -68,7 +68,7 @@ void App::render()
 }
 ```
 
-![First ball rendering](/assets/images/MAGISFML/sfml-ball-1.JPG)
+![First ball rendering](/assets/images/MAGISFML/sfml-ball-1.jpg)
 
 Well it looks like a ball! Notice however that even though we told the ball to set its position to half the width & half the height - it isn't centered. This is because by default our ball will render starting in the top left, rather than it's center. We can correct this by adding the following line of code when the `CircleShape` is created:
 ```c++
@@ -81,20 +81,118 @@ This offsets the rendering of the circle by half of it's size (radius is half of
 
 Next up we need to update the position of the ball every frame according to it's velocity - here I want to make a change, rather than updating the location of the paddles within the `processInput()` function, I think I'd prefer to move all 3 objects within the same function, and simply use a struct like we have here to hold the vertical velocity of the Player's.
 
-### ℜ𝔢𝔣𝔞𝔠𝔱𝔬𝔯𝔦𝔫𝔤 𝔗𝔦𝔪𝔢!
+### Time for Some Cheeky 𝓡𝓮𝓯𝓪𝓬𝓽𝓸𝓻𝓲𝓷𝓰
 I won't show the whole file for each change, here's a condensed version:
 
-![Git diff 1](/assets/images/MAGISFML/sfml-player-refactor-1.PNG)
+![Git diff 1](/assets/images/MAGISFML/sfml-player-refactor-3.png)
 
-![Git diff 2](/assets/images/MAGISFML/sfml-player-refactor-2.PNG)
+![Git diff 2](/assets/images/MAGISFML/sfml-player-refactor-4.png)
 
-![Git diff 3](/assets/images/MAGISFML/sfml-player-refactor-3.PNG)
+![Git diff 3](/assets/images/MAGISFML/sfml-player-refactor-1.png)
 
-![Git diff 4](/assets/images/MAGISFML/sfml-player-refactor-4.PNG)
+![Git diff 4](/assets/images/MAGISFML/sfml-player-refactor-2.png)
 
-```javascript
+### Movement Function
+So now that that's out of the way, let's change our `processInputs()` function like so:
 
-/** TODO:
-    REST OF THIS ARTICLE
-**/
+```c++
+void App::processInput()
+{
+  const int pixelsPerSeconds = 150;
+
+  player1.verticalVel = 0;
+  player2.verticalVel = 0;
+
+  if (sf::Keyboard::isKeyPressed(sf::Keyboard::S))
+  {
+    player1.verticalVel = pixelsPerSeconds;
+  }
+  else if (sf::Keyboard::isKeyPressed(sf::Keyboard::W))
+  {
+    player1.verticalVel = -pixelsPerSeconds;
+  }
+
+  if (sf::Keyboard::isKeyPressed(sf::Keyboard::Down))
+  {
+    player2.verticalVel = pixelsPerSeconds;
+  }
+  else if (sf::Keyboard::isKeyPressed(sf::Keyboard::Up))
+  {
+    player2.verticalVel = -pixelsPerSeconds;
+  }
+}
 ```
+
+Then we can create ourselves a new function to do all the movements:
+```c++
+void App::doMovements()
+{
+  player1.rectShape.move(0, frameDelta * player1.verticalVel);
+  player2.rectShape.move(0, frameDelta * player2.verticalVel);
+}
+```
+
+We'll also re-arrange our mainloop to do the movements before rendering.
+
+```c++
+/** App::App() { ... */
+  while (window.isOpen())
+  {
+    frameDelta = clock.restart().asSeconds();
+
+    processEvents();
+    processInput();
+    doMovements();
+
+    render();
+  }
+/** ...
+}
+*/
+```
+
+Now we have everything back to normal we implement the basic ball movement code.
+```c++
+void App::doMovements()
+{
+  player1.rectShape.move(0, frameDelta * player1.verticalVel);
+  player2.rectShape.move(0, frameDelta * player2.verticalVel);
+
+  ball.circleShape.move(ball.vel);
+}
+```
+
+I'm going to quickly implement a helper function to rotate a vector by some degrees, this will make it a lot easier to do rotations later.
+
+```c++
+void rotateVec(sf::Vector2f& vec, double angle)
+{
+  double x2 = (vec.x * std::cos(angle * PI / 180.0)) 
+            - (vec.y * std::sin(angle * PI / 180.0));
+
+  double y2 = (vec.x * std::sin(angle * PI / 180.0)) 
+            + (vec.y * std::cos(angle * PI / 180.0));
+
+  vec.x = x2;
+  vec.y = y2;
+}
+```
+
+<sup style="color: #777;">Function above comes from [this](https://en.wikipedia.org/wiki/Rotation_matrix) wikipedia article on rotation of vectors - we're using `PI / 180` to convert from Radians to Degrees, read more about that [here](https://betterexplained.com/articles/intuitive-guide-to-angles-degrees-and-radians/).</sup>
+
+
+Now we can use the function to make our ball bounce off the edges (we could have just inverted the horizontal velocity but as an example):
+
+```c++
+void App::doMovements()
+{
+  // other movements ...
+  if (ball.circleShape.getPosition().x <= 0 || ball.circleShape.getPosition().x >= window.getSize().x)
+  {
+    rotateVec(ball.vel, 180.0);
+  }
+}
+```
+
+![IMAGE OF BALL BOUNCING]()
+
