Fix url extension bug

--- a/_posts/sfml/2020-06-12-sfml-3.md
+++ b/_posts/sfml/2020-06-12-sfml-3.md
@@ -68,7 +68,7 @@ void App::render()
 }
 ```
 
-![First ball rendering](/assets/images/MAGISFML/sfml-ball-1.JPG)
+![First ball rendering](/assets/images/MAGISFML/sfml-ball-1.jpg)
 
 Well it looks like a ball! Notice however that even though we told the ball to set its position to half the width & half the height - it isn't centered. This is because by default our ball will render starting in the top left, rather than it's center. We can correct this by adding the following line of code when the `CircleShape` is created:
 ```c++
@@ -84,13 +84,13 @@ Next up we need to update the position of the ball every frame according to it's
 ### ℜ𝔢𝔣𝔞𝔠𝔱𝔬𝔯𝔦𝔫𝔤 𝔗𝔦𝔪𝔢!
 I won't show the whole file for each change, here's a condensed version:
 
-![Git diff 1](/assets/images/MAGISFML/sfml-player-refactor-1.PNG)
+![Git diff 1](/assets/images/MAGISFML/sfml-player-refactor-1.png)
 
-![Git diff 2](/assets/images/MAGISFML/sfml-player-refactor-2.PNG)
+![Git diff 2](/assets/images/MAGISFML/sfml-player-refactor-2.png)
 
-![Git diff 3](/assets/images/MAGISFML/sfml-player-refactor-3.PNG)
+![Git diff 3](/assets/images/MAGISFML/sfml-player-refactor-3.png)
 
-![Git diff 4](/assets/images/MAGISFML/sfml-player-refactor-4.PNG)
+![Git diff 4](/assets/images/MAGISFML/sfml-player-refactor-4.png)
 
 ```javascript
 
